What's new...

Sept 26/2018 : JF 17.2.0 released
  - Java 11 support
    - Since Oracle will no longer release a JRE I've made one available at javaforce.sourceforge.net
      - basically just package the JDK without the mod files and create required registry keys
  - jfPasswords/0.19
    - add JRE to MSI package
  - jfDataLogger/0.22
    - new : added csv save function
  - jfPhone/1.16
    - fix : version checking function

Sept 21/2018 : JF 17.1.0 released
  - jfPhone/1.15 released!
    - minor fixes
  - jfPBX/0.27 released!
    - minor fixes

Sept 19/2018 : JF 17.0.0 released
  - new : JFAWT.removeAltGraph()
    - removes AltGraph modifier which was added in Java9
    - the right Alt and AltGraph use the same scancode
  - new : remove support for 32bit binaries since Java9+ no longer supports it
  - new : jfControls/0.4
    - tags are now stored in files for faster load/save and are stored in plain java objects
  - new : VoIP
    - added proper support for RFC 5764 (DTLS-SRTP) which is now included in Java9
  - renamed jPhoneLite to jfPhone
  - renamed jPBXlite to jfPBX
  - the new DTLS code has not been tested yet and will not work
    - I just wanted to get this release out to get the ball rolling
      since it's been such a long time since the last release.
			Tried to do too many things at once.

Jan 23/2018 : JF 16.9.0 relaesed
  - new : jfModbusServer
    - a modbus server for Raspberry PI 2/3 to control GPIO remotely

Dec 20/2017 : JF 16.8.0 released
  - XML
    - fix encoding attributes
  - jfPassword/0.18
    - XML fix will improve XML compatibility
  - Controller.Tag
    - add support for reading byte ranges (S7 only) (untested)

Dec 19/2017 : JF 16.7.0 released
  - jfDNS/0.9
    - added support for multiple uplink DNS servers
  - jfControls/0.3
    - for prev tag fixes

Nov 30/2017 : JF 16.6.0 released
  - fix controller Tag connection issue
  - jfDataLogger/0.18
  - jfDataLoggerPlus/0.9

Nov 30/2017 : JF 16.5.0 released
  - fix DNS bug (IP6 issue)