@@ -7,7 +7,7 @@
   <property name="build" location="classes"/>
   <property environment="env"/>
   <property name="jre" location="${env.JAVA_HOME}"/>
-  <property name="version" value="11.0"/>
+  <property name="version" value="11.0-2"/>
   <property name="jheat" value="--base=."/>
 
   <target name="depjars">
